add pages Project/techno/contact and update marge

--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -2,7 +2,7 @@ $whiteColor: #FFF;
 $blackColor:#000;
 
 .footer{
-    background-color: $blackColor;
+    background-color: #000;
     padding: 50px;
     nav{
         display: flex;
