--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -1,12 +1,10 @@
-html{
+html,body{
     margin: 0;
     padding: 0;
-    body{
-        margin: 0;
-        padding: 0;
-        
+    .my-app{
+        height: 100vh;
     }
-    
-}
+}   
+
 
 
