--- a/src/assets/style/techno.scss
+++ b/src/assets/style/techno.scss
@@ -6,7 +6,18 @@
         margin: 30px;
         .flexImage{
             display: flex;
+            .flexImage-title{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
             img{
+                object-fit: cover;
+                border-radius: 10px;
+                height: 100px;
+                margin: 10px;
+            }
+            .newphoto{
                 object-fit: cover;
                 border-radius: 10px;
                 height: 100px;
