--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -25,6 +25,7 @@ header{
     nav{
       display: flex;
       justify-content: space-around;    
+      font-size: 1.5rem;
       .link{
         text-decoration:none;
         color: $whiteColor;
