--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -4,12 +4,14 @@
     align-items: center;
     margin-top: 50px;
     margin-bottom: 50px;
-    h1{
-        font-size: 2rem ;
-    }
     label{
         font-size: 1.5rem;
         margin-bottom: 10px;
+    }
+    select,option{
+        font-weight:600;
+        cursor: pointer;
+        font-size: 1rem;
     }
     select{
         margin-bottom: 10px;
@@ -29,5 +31,13 @@
             height: 150px;
             margin: 10px;
         }
+        
     }   
+}
+
+.visible{
+    display: block ;
+}
+.hidden{
+    display: none;
 }
