--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -25,19 +25,62 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         img{
-            object-fit: cover;
+            object-fit:contain;
             border-radius: 10px;
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             margin: 10px;
+            box-shadow: 5px 5px 5px grey;
         }
+        
+        #flexImage-title {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            cursor: pointer;
+
+            .modal {
+                position: absolute;
+                width: 150px;
+                font-size: 1rem;
+                top: 20px;
+                z-index: 1;
+                font-weight: bolder;
+                display: none; 
+            }
+
+            :hover{
+                opacity: 0.2;
+            }
+
+            &:hover{
+                
+                .modal{
+                    display: block;
+                }
+            }
+            
+            
+
+            
+            
+            
+        }
+        
         
     }   
 }
 
+
 .visible{
     display: block ;
+   
 }
 .hidden{
     display: none;
+    
+}
+.opacity{
+    opacity: 0.2;
 }
