--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -14,7 +14,7 @@
         font-size: 1rem;
     }
     select{
-        margin-bottom: 10px;
+        margin-bottom: 40px;
         padding: 10px 40px;
         background-color: antiquewhite;
     }
@@ -24,14 +24,7 @@
         width: 800px;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        img{
-            object-fit:contain;
-            border-radius: 10px;
-            width: 200px;
-            height: 200px;
-            margin: 10px;
-            box-shadow: 5px 5px 5px grey;
-        }
+        
         
         #flexImage-title {
             position: relative;
@@ -39,32 +32,37 @@
             flex-direction: column;
             align-items: center;
             cursor: pointer;
+            transition: transform 2s ease;
+            
+            img{
+                object-fit:cover;
+                border-radius: 10px;
+                width: 200px;
+                height: 200px;
+                margin: 10px;
+                box-shadow: 5px 5px 5px grey;
+            }
 
             .modal {
                 position: absolute;
                 width: 150px;
+                height: 150px;
+                border-radius: 10px;
+                padding: 5px;
                 font-size: 1rem;
                 top: 20px;
-                z-index: 1;
-                font-weight: bolder;
+                background-color: #fff; 
                 display: none; 
+                text-align: center;   
             }
 
-            :hover{
-                opacity: 0.2;
-            }
-
+            
             &:hover{
-                
+                transform: scale(1.2); 
                 .modal{
-                    display: block;
+                    display: block;       
                 }
             }
-            
-            
-
-            
-            
             
         }
         
