--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -25,8 +25,7 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         
-        
-        #flexImage-title {
+        #flexImage-title{
             position: relative;
             display: flex;
             flex-direction: column;
@@ -41,6 +40,11 @@
                 height: 200px;
                 margin: 10px;
                 box-shadow: 5px 5px 5px grey;
+            }
+
+            .title-picture,.modal{
+                text-decoration: none;
+                color: #000;
             }
 
             .modal {
