--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -3,16 +3,28 @@ $whiteColor: #FFF;
 $blackColor:#000;
 $blackGrey:#3a3a3a;
 
+@keyframes slide {
+  from{
+    margin-left: -30%;
+  }
+  to{
+    margin-left: 20px;
+  }
+}
+
 header{
     display: flex;
     justify-content: space-between;
     background-color: $blackGrey;
     align-items: center;
+    
     .title {
       display: flex;
       flex-direction: column;
       align-items: center;
       margin: 10px 0 10px 20px;
+      animation-duration: 3s;
+      animation-name:  slide;
       h1{
         color: $whiteColor;
       }
@@ -21,7 +33,7 @@ header{
       }
     }
     .navigation {
-    width: 50%;
+      width: 50%;
     nav{
       display: flex;
       justify-content: space-around;    
