--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -1,6 +1,34 @@
 html,body{
+    a{
+        text-decoration:none;
+        color: #000;
+    }
     margin: 0;
     padding: 0;
+    .my-app-change{
+        h1{
+            font-size: 2.2rem;
+        }
+
+        p{
+            font-size: 1.2rem;
+        }
+
+        label{
+            font-size: 1.2rem
+        }
+        select{
+            font-size: 1rem;
+        }
+
+        button{
+            font-size: 1.5rem;
+        }
+        
+        .modal{
+            font-size: 1rem;
+        }
+    }
 }   
 
 
