--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -3,17 +3,40 @@
     display: flex;
     align-items: center;
     .picture-size{
-        width: 600px;
-        height: 400px;
-        img{
-            object-fit: contain;
-            width: 100%;
-            height: 100%;
+        width: 800px;
+        .listPicture{
+            position: relative;
+            display: flex;
+            overflow: hidden;
+            margin-right: 20px;
+            align-items: center;
+            img{
+                object-fit: contain;
+                width: 100%;
+                height: 100%;
+            }
+            .fa-chevron-right{
+                position: absolute;
+                right: 0px;
+                font-size: 2rem;
+                color: #000;
+                padding: 5px;
+                background: #fff;
+                cursor: pointer;
+            }
+            .fa-chevron-left{
+                position: absolute;
+                left: 0px;
+                font-size: 2rem;
+                color: #000;
+                padding: 5px;
+                background: #fff;
+                cursor: pointer;
+            }
         }
     }
     
     section{
-        
         list-style-type: none;
         color: #000;
         text-decoration: none;
@@ -26,3 +49,8 @@
     }
     
 }
+
+.hidden{
+    display: none;
+}
+
