changed style text + delete file css useless

--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -3,13 +3,14 @@
     display: flex;
     align-items: center;
     .picture-size{
-        width: 800px;
         .listPicture{
             position: relative;
             display: flex;
             overflow: hidden;
             margin-right: 20px;
             align-items: center;
+            height: 580px;
+            width: 800px;
             img{
                 object-fit: contain;
                 width: 100%;
