--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -16,6 +16,7 @@ header{
     justify-content: space-between;
     background-color: $blackGrey;
     align-items: center;
+    font-family: Montserrat,sans-serif;
     
     .title {
       display: flex;
