--- a/src/assets/style/propos.scss
+++ b/src/assets/style/propos.scss
@@ -1,6 +1,10 @@
 .propos{
     display: flex;
     margin: 30px;
+    p{
+        font-family: 'Dancing Script', cursive;
+    }
+    
     img{
         width: 50%;
         height: 50%;
