--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -4,6 +4,7 @@ $blackColor:#000;
 .footer{
     background-color: #000;
     padding: 50px;
+    font-family: Montserrat,sans-serif;
     nav{
         display: flex;
         justify-content: space-around;
