add descriptions for 6/7 projects

--- a/src/assets/style/propos.scss
+++ b/src/assets/style/propos.scss
@@ -14,4 +14,9 @@
         width: 50%;
         height: 50%;
     }
+    .bloc-soc{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
 }
