--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -7,8 +7,9 @@ html,body{
     }
     
     .my-app-change{
+        margin-top: 140px;
         h1{
-            font-size: 2.2rem;
+            font-size: 2rem;
         }
 
         p,a{
