--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -1,4 +1,15 @@
 .detail{
+    position: relative;
+    .return{
+        position: absolute;
+        top: -50px;
+        left: -40px;
+        font-size: 2rem;
+        color: #000;
+        padding: 5px;
+        background: #fff;
+        cursor: pointer;
+    }
     margin: 50px;
     display: flex;
     align-items: center;
