add page of sent

--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -1,5 +1,7 @@
 .detail{
     position: relative;
+    margin-top: 120px;
+    height: 100vh;
     .return{
         position: absolute;
         top: -50px;
