--- a/src/assets/style/contact.scss
+++ b/src/assets/style/contact.scss
@@ -5,6 +5,8 @@ $gradientColor: rgb(170, 203, 221);
     flex-direction: column;
     align-items: center;
     margin: 30px;
+    margin-top: 120px;
+    height: 100vh;
     #block-form{
         display: flex;
         flex-direction: column;
