--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -4,6 +4,7 @@
     align-items: center;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-top: 120px;
     label{
         margin-bottom: 10px;
     }
