custom error page

--- a/src/assets/style/Message.scss
+++ b/src/assets/style/Message.scss
@@ -7,7 +7,7 @@
         left: 40px;
         font-size: 2rem;
     }
-    #message-title{
+    .message-title{
         font-size: 5rem;
     }
     display: flex;
