--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -54,6 +54,8 @@
         list-style-type: none;
         color: #000;
         text-decoration: none;
+        width: 600px;
+        height: auto;
         h1{
             font-size: 1.7rem;   
         }
