--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -8,11 +8,19 @@ $blackColor:#000;
     nav ul{
         display: flex;
         justify-content: space-around;
+        @media (max-width:500px){
+            flex-direction: column;
+            align-items: center;
+            height: 100px;
+        }
         
         li{
             color: $whiteColor;
             list-style-type: none;
             font-size: 1.5rem;
+            @media (max-width:800px){
+                font-size: 1rem;
+            }
             .fa-linkedin{
                 color: #fff;
             }
