--- a/src/assets/style/contact.scss
+++ b/src/assets/style/contact.scss
@@ -8,6 +8,13 @@ $gradientColor: rgb(170, 203, 221);
     margin: 30px;
     margin-top: 120px;
     height: 100vh;
+    @media (max-width: 700px){
+        align-items: stretch;
+        #titleForm{
+            text-align: center;
+        }
+    }
+
     #form{
         display: flex;
         flex-direction: column;
@@ -17,6 +24,9 @@ $gradientColor: rgb(170, 203, 221);
             flex-direction: column;
             align-items: baseline;
             width: 600px;
+            @media (max-width: 700px){
+                width: 100%;
+            }
             label,input{
                 margin: 5px;
             }
