--- a/src/assets/style/contact.scss
+++ b/src/assets/style/contact.scss
@@ -1,13 +1,17 @@
 $gradientColor: rgb(170, 203, 221);
 
-
 #block-contact{
+    background-image: url("../image/paysage.jpg");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px;
-    margin-top: 120px;
+    margin-top: 80px;
+    padding: 30px;
     height: 100vh;
+    @media (max-width:725px){
+        margin-top: 100px;
+    }
     @media (max-width: 700px){
         align-items: stretch;
         #titleForm{
@@ -16,6 +20,7 @@ $gradientColor: rgb(170, 203, 221);
     }
 
     #form{
+        backdrop-filter: blur(8px);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -24,6 +29,7 @@ $gradientColor: rgb(170, 203, 221);
             flex-direction: column;
             align-items: baseline;
             width: 600px;
+            padding-right: 15px;
             @media (max-width: 700px){
                 width: 100%;
             }
