--- a/src/assets/style/techno.scss
+++ b/src/assets/style/techno.scss
@@ -1,4 +1,5 @@
 .page-techno{
+    padding-top: 10px;
     margin-top: 120px;
     h1{
         text-align: center;
@@ -7,6 +8,7 @@
         margin: 30px;
         .flexImage{
             display: flex;
+            flex-wrap: wrap;
             .flexImage-title{
                 display: flex;
                 flex-direction: column;
