--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -1,7 +1,11 @@
 .detail{
     position: relative;
-    margin-top: 120px;
     height: 100vh;
+    margin:50px;
+    display:flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     .return{
         position: absolute;
         top: 50px;
@@ -11,6 +15,9 @@
         padding: 5px;
         background: #fff;
         cursor: pointer;
+        @media (max-width: 750px){
+            top: 100px;
+        }
     }
     margin: 50px;
     display: flex;
@@ -23,7 +30,10 @@
             margin-right: 20px;
             align-items: center;
             height: 580px;
-            width: 800px;
+            width: 500px;
+            @media (max-width : 600px){
+                width : 100%;
+            }
             img{
                 object-fit: contain;
                 width: 100%;
