--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -1,11 +1,17 @@
 .detail{
     position: relative;
-    height: 100vh;
-    margin:50px;
+    margin:150px 50px 50px;
     display:flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
+    @media (min-width:1235px){
+        height: 100vh;
+        justify-content: space-around;
+    }
+    @media (max-width:1235px){
+        margin: 120px 50px 200px 50px;
+    }
     .return{
         position: absolute;
         top: 50px;
@@ -14,9 +20,9 @@
         color: #000;
         padding: 5px;
         background: #fff;
-        cursor: pointer;
-        @media (max-width: 750px){
-            top: 100px;
+        cursor: pointer;  
+        @media(max-width:725px){
+            top: 20px;
         }
     }
     margin: 50px;
@@ -65,7 +71,6 @@
         color: #000;
         text-decoration: none;
         width: 600px;
-        height: auto;
         h1{
             font-size: 1.7rem;   
         }
