--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -5,6 +5,9 @@ $blackColor:#000;
     background-color: #000;
     padding: 15px;
     font-family: Montserrat,sans-serif;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     nav ul{
         display: flex;
         justify-content: space-around;
