--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-top: 120px;
+    margin: 120px 50px 200px 50px;
     label{
         margin-bottom: 10px;
     }
