--- a/src/assets/style/techno.scss
+++ b/src/assets/style/techno.scss
@@ -1,6 +1,6 @@
 .page-techno{
     padding-top: 10px;
-    margin-top: 120px;
+    margin: 120px 0 200px 0;
     h1{
         text-align: center;
     }
