--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -18,9 +18,10 @@
         left: -40px;
         font-size: 2rem;
         color: #000;
-        padding: 5px;
+        padding: 8px;
         background: #fff;
         cursor: pointer;  
+        border-radius: 50%;
         @media(max-width:725px){
             top: 20px;
         }
