--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -39,7 +39,7 @@
             }
 
             .title-picture,.modal{
-                color: #000;
+                color: #fff;
             }
 
             .modal {
