--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -1,21 +1,80 @@
-.detail{
+.icon-detail{
     position: relative;
-    margin:150px 50px 50px;
-    display:flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    @media (min-width:1235px){
-        height: 100vh;
-        justify-content: space-around;
+    .detail{
+        position: relative;
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin: 50px;
+        @media (min-width:1235px){
+            height: 100vh;
+            justify-content: space-around;
+        }
+        @media (max-width:1235px){
+            margin: 50px 50px 200px 50px;
+        }
+        @media (max-width:740px){
+            margin: 120px 50px 200px 50px;
+        }
+        
+        .picture-size{
+            .listPicture{
+                position: relative;
+                display: flex;
+                overflow: hidden;
+                margin-right: 20px;
+                align-items: center;
+                height: 580px;
+                width: 500px;
+                @media (max-width : 600px){
+                    width : 100%;
+                }
+                img{
+                    object-fit: contain;
+                    width: 100%;
+                    height: 100%;
+                }
+                .fa-chevron-right{
+                    position: absolute;
+                    right: 0px;
+                    font-size: 2rem;
+                    color: #000;
+                    padding: 5px;
+                    background: #fff;
+                    cursor: pointer;
+                }
+                .fa-chevron-left{
+                    position: absolute;
+                    left: 0px;
+                    font-size: 2rem;
+                    color: #000;
+                    padding: 5px;
+                    background: #fff;
+                    cursor: pointer;
+                }
+            }
+        }
+        
+        section{
+            width: 600px;
+            @media(max-width:1236px){
+                width: 100%;
+            }
+            h1{
+                font-size: 1.7rem;   
+            }
+            p{
+                font-size: 1.3rem;
+            }
+        }
+        
     }
-    @media (max-width:1235px){
-        margin: 120px 50px 200px 50px;
-    }
+
     .return{
         position: absolute;
         top: 50px;
-        left: -40px;
+        left: 15px;
         font-size: 2rem;
         color: #000;
         padding: 8px;
@@ -26,60 +85,6 @@
             top: 20px;
         }
     }
-    margin: 50px;
-    display: flex;
-    align-items: center;
-    .picture-size{
-        .listPicture{
-            position: relative;
-            display: flex;
-            overflow: hidden;
-            margin-right: 20px;
-            align-items: center;
-            height: 580px;
-            width: 500px;
-            @media (max-width : 600px){
-                width : 100%;
-            }
-            img{
-                object-fit: contain;
-                width: 100%;
-                height: 100%;
-            }
-            .fa-chevron-right{
-                position: absolute;
-                right: 0px;
-                font-size: 2rem;
-                color: #000;
-                padding: 5px;
-                background: #fff;
-                cursor: pointer;
-            }
-            .fa-chevron-left{
-                position: absolute;
-                left: 0px;
-                font-size: 2rem;
-                color: #000;
-                padding: 5px;
-                background: #fff;
-                cursor: pointer;
-            }
-        }
-    }
-    
-    section{
-        list-style-type: none;
-        color: #000;
-        text-decoration: none;
-        width: 600px;
-        h1{
-            font-size: 1.7rem;   
-        }
-        p{
-            font-size: 1.3rem;
-        }
-    }
-    
 }
 
 .hidden{
