--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -17,7 +17,6 @@
     }
     section{
         display: flex;
-        flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
         
@@ -39,7 +38,7 @@
             }
 
             .title-picture,.modal{
-                color: #fff;
+                font-size: 1rem ;
             }
 
             .modal {
