--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -2,7 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 120px 50px 200px 50px;
+    padding: 120px 50px 120px;
+    height: 100vh;
+    @media(max-width:540px){
+        padding: 120px 50px 1500px;
+    }
     label{
         margin-bottom: 10px;
     }
@@ -11,7 +15,6 @@
         cursor: pointer;
     }
     select{
-        margin-bottom: 40px;
         padding: 10px 40px;
         background-color: antiquewhite;
     }
