modified background + style + filter

--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -3,10 +3,9 @@ $blackColor:#000;
 
 .footer{
     background-color: #000;
-    font-family: Montserrat,sans-serif;
-    position: fixed;
-    bottom: 0;
+    font-family: Montserrat, sans-serif;
     width: 100%;
+    padding: 20px 0;
     nav ul{
         display: flex;
         justify-content: space-around;
