--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -1,35 +1,19 @@
 .icon-detail{
     position: relative;
     .detail{
-        position: relative;
-        display:flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        display: flex;
         align-items: center;
-        margin: 50px;
-        @media (min-width:1235px){
-            height: 100vh;
-            justify-content: space-around;
-        }
-        @media (max-width:1235px){
-            margin: 100px 50px 200px 50px;
-        }
-        @media (max-width:740px){
-            margin: 120px 50px 200px 50px;
-        }
+        padding: 220px 30px 0;
+        flex-direction: column;
         
         .picture-size{
             .listPicture{
                 position: relative;
                 display: flex;
                 overflow: hidden;
-                margin-right: 20px;
                 align-items: center;
                 height: 580px;
-                width: 500px;
-                @media (max-width : 600px){
-                    width : 100%;
-                }
+                max-width: 580px;
                 img{
                     object-fit: contain;
                     width: 100%;
@@ -57,10 +41,6 @@
         }
         
         section{
-            width: 600px;
-            @media(max-width:1236px){
-                width: 100%;
-            }
             h1{
                 font-size: 1.7rem;   
             }
@@ -73,7 +53,7 @@
 
     .return{
         position: absolute;
-        top: 50px;
+        top: 160px;
         left: 15px;
         font-size: 2rem;
         color: #000;
@@ -81,9 +61,6 @@
         background: #fff;
         cursor: pointer;  
         border-radius: 50%;
-        @media(max-width:725px){
-            top: 20px;
-        }
     }
 }
 
