--- a/src/assets/style/project.scss
+++ b/src/assets/style/project.scss
@@ -2,11 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 120px 50px 120px;
-    height: 100vh;
-    @media(max-width:540px){
-        padding: 120px 50px 1500px;
-    }
+    padding: 160px 30px;
     label{
         margin-bottom: 10px;
     }
@@ -17,6 +13,7 @@
     select{
         padding: 10px 40px;
         background-color: antiquewhite;
+        margin-bottom: 30px;
     }
     section{
         display: flex;
