--- a/src/assets/style/propos.scss
+++ b/src/assets/style/propos.scss
@@ -1,8 +1,5 @@
 #main-page{
-    margin: 120px 30px 190px;
-    @media (max-width:450px){
-        margin: 160px 30px 190px;
-    }
+    padding: 160px 30px 0;
 .propos,.parcours{
     display: flex;
     align-items: center;
