--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -62,6 +62,10 @@
         cursor: pointer;  
         border-radius: 50%;
     }
+    .return:hover{
+        background: rgb(207, 204, 204);
+        
+    }
 }
 
 .hidden{
