size text modified

--- a/src/assets/style/about.scss
+++ b/src/assets/style/about.scss
@@ -15,6 +15,7 @@
         }
         p{
             font-family: 'Dancing Script', cursive;
+            font-size: 1.3rem;
         }
         
         img{
